--- a/css/index.css
+++ b/css/index.css
@@ -141,7 +141,7 @@ h2,
 h3,
 h4,
 h5 {
-  font-family: 'Indie Flower', cursive;
+  font-family: 'Roboto', sans-serif;
 }
 h1 {
   font-size: 4rem;
@@ -164,10 +164,81 @@ img {
   height: auto;
 }
 .container {
-  width: 100%;
+  width: 90%;
   max-width: 1200px;
   margin: 0 auto;
 }
-* {
-  background: red;
+body div.hero {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+body div.hero div.text {
+  width: 35%;
+}
+body div.hero div.text h2 {
+  font-family: 'M PLUS Rounded 1c', sans-serif;
+  color: #222222;
+  font-weight: bold;
+}
+body div.hero img {
+  width: 60%;
+  margin: 5% 0;
+}
+section.header {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: space-between;
+  border-bottom: 1px solid black;
+  padding: 1%;
+}
+section.header a {
+  width: 20%;
+}
+section.header h1 {
+  color: #ff4500;
+  font-size: 4.5rem;
+  font-family: 'M PLUS Rounded 1c', sans-serif;
+  font-weight: bold;
+  text-transform: lowercase;
+}
+section.header nav {
+  display: flex;
+  justify-content: space-between;
+  min-width: 100px;
+}
+section.header nav a {
+  text-decoration: none;
+  color: black;
+  width: 5rem;
+}
+footer {
+  display: flex;
+  border-top: 1px solid black;
+  justify-content: space-between;
+  align-content: center;
+  align-items: center;
+  padding: 2%;
+  position: absolute;
+  width: 90%;
+  max-width: 1200px;
+  bottom: 0;
+}
+footer p {
+  color: #222222;
+  text-align: center;
+  align-items: center;
+}
+footer nav {
+  align-content: center;
+  align-items: center;
+  width: 20%;
+  min-width: 100px;
+  display: flex;
+  justify-content: space-between;
+}
+footer nav a {
+  text-decoration: none;
+  color: #222222;
 }
