--- a/less/global.less
+++ b/less/global.less
@@ -11,7 +11,7 @@
   }
   
   h1, h2, h3, h4, h5 {
-    font-family: 'Indie Flower', cursive;
+    font-family: 'Roboto', sans-serif;
   }
   
   h1 {
@@ -40,8 +40,28 @@
   }
   
   .container {
-    width: 100%;
+    width: 90%;
     max-width: 1200px;
     margin: 0 auto;
   }
-  
+
+body{
+  div.hero{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    div.text{
+      width: 35%;
+      h2{
+        font-family: 'M PLUS Rounded 1c', sans-serif;
+        color: #222222;
+        font-weight: bold;
+      }
+      
+    }
+    img{
+      width: 60%;
+      margin: 5% 0;
+    }
+  }
+}
