--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,3 +1,60 @@
-*{
-    background: red;
+section.header{
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: space-between;
+    border-bottom: 1px solid black;
+    padding: 1%;
+    a{
+        width: 20%;
+    }
+    h1 {
+        
+        color: #ff4500;
+        font-size: 4.5rem;
+        font-family: 'M PLUS Rounded 1c', sans-serif;
+        font-weight: bold;
+        text-transform: lowercase;
+    }
+    nav{
+        
+        display: flex;
+        justify-content: space-between;
+        min-width: 100px;
+        a{
+            text-decoration: none;
+            color: black;
+            width: 5rem;
+        }
+    }
+}
+
+footer{
+    display: flex;
+    border-top: 1px solid black;
+    justify-content: space-between;
+    align-content: center;
+    align-items: center;
+    padding: 2%;
+    position: absolute;
+    width: 90%;
+    max-width: 1200px;
+    bottom: 0;
+    p{
+        color: #222222;
+        text-align: center;
+        align-items: center;
+    }
+    nav{
+        align-content: center;
+        align-items: center;
+        width: 20%;
+        min-width: 100px;
+        display: flex;
+        justify-content: space-between;
+            a{
+            text-decoration: none;
+            color: #222222;
+            }
+    }
 }
