--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,6 +5,7 @@ section.header{
     justify-content: space-between;
     border-bottom: 1px solid black;
     padding: 1%;
+    max-height: 9vh;
     a{
         width: 20%;
     }
@@ -23,38 +24,10 @@ section.header{
         min-width: 100px;
         a{
             text-decoration: none;
-            color: black;
+            color: #222222;
+            font-size: 1.4rem;
             width: 5rem;
         }
     }
 }
 
-footer{
-    display: flex;
-    border-top: 1px solid black;
-    justify-content: space-between;
-    align-content: center;
-    align-items: center;
-    padding: 2%;
-    position: absolute;
-    width: 90%;
-    max-width: 1200px;
-    bottom: 0;
-    p{
-        color: #222222;
-        text-align: center;
-        align-items: center;
-    }
-    nav{
-        align-content: center;
-        align-items: center;
-        width: 20%;
-        min-width: 100px;
-        display: flex;
-        justify-content: space-between;
-            a{
-            text-decoration: none;
-            color: #222222;
-            }
-    }
-}
