added media queries for mobile

--- a/less/global.less
+++ b/less/global.less
@@ -50,8 +50,14 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    @media @mobile{
+      flex-direction: column;
+    }
     div.text{
       width: 35%;
+      @media @mobile{
+        width: 90%;
+      }
       h2{
         font-family: 'M PLUS Rounded 1c', sans-serif;
         color: #222222;
@@ -62,14 +68,21 @@ body{
     img{
       width: 60%;
       margin: 5% 0;
+      @media @mobile{
+        width: 100%;
+      }
     }
   }
 }
 
 section.team{
-  border: 1px solid red;
+  //border: 1px solid red;
   div{
-    
+    @media @mobile{
+      width: 90%;
+      flex-direction: column-reverse;
+
+    }
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -87,6 +100,9 @@ section.team{
     
   }
   div.even{
+    @media @mobile{
+      flex-direction: column-reverse;
+    }
     flex-direction: row-reverse;
     padding-bottom: 5%;
     justify-content: space-around;
@@ -99,6 +115,8 @@ section.team{
     width: 25%;
     max-width: 200px;
     border-radius: 20px;
-    
+    @media @mobile{
+      width: 90%;
+    }
   }
 }
