--- a/css/index.css
+++ b/css/index.css
@@ -173,8 +173,18 @@ body div.hero {
   align-items: center;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  body div.hero {
+    flex-direction: column;
+  }
+}
 body div.hero div.text {
   width: 35%;
+}
+@media (max-width: 500px) {
+  body div.hero div.text {
+    width: 90%;
+  }
 }
 body div.hero div.text h2 {
   font-family: 'M PLUS Rounded 1c', sans-serif;
@@ -185,14 +195,22 @@ body div.hero img {
   width: 60%;
   margin: 5% 0;
 }
-section.team {
-  border: 1px solid red;
+@media (max-width: 500px) {
+  body div.hero img {
+    width: 100%;
+  }
 }
 section.team div {
   display: flex;
   justify-content: space-around;
   align-items: center;
   margin: 4% 0;
+}
+@media (max-width: 500px) {
+  section.team div {
+    width: 90%;
+    flex-direction: column-reverse;
+  }
 }
 section.team div p {
   width: 75%;
@@ -209,6 +227,11 @@ section.team div.even {
   padding-bottom: 5%;
   justify-content: space-around;
 }
+@media (max-width: 500px) {
+  section.team div.even {
+    flex-direction: column-reverse;
+  }
+}
 section.team div.odd {
   padding-bottom: 5%;
   justify-content: space-around;
@@ -217,6 +240,11 @@ section.team img {
   width: 25%;
   max-width: 200px;
   border-radius: 20px;
+}
+@media (max-width: 500px) {
+  section.team img {
+    width: 90%;
+  }
 }
 section.header {
   display: flex;
@@ -227,8 +255,24 @@ section.header {
   padding: 1%;
   max-height: 9vh;
 }
-section.header a {
+section.header a.logo {
   width: 20%;
+}
+@media (max-width: 500px) {
+  section.header a.logo {
+    display: none;
+  }
+}
+section.header a.mobile {
+  display: none;
+}
+@media (max-width: 500px) {
+  section.header a.mobile {
+    display: flex;
+    max-height: 6vh;
+    max-width: 6vh;
+    width: auto;
+  }
 }
 section.header h1 {
   color: #ff4500;
@@ -236,6 +280,12 @@ section.header h1 {
   font-family: 'M PLUS Rounded 1c', sans-serif;
   font-weight: bold;
   text-transform: lowercase;
+}
+@media (max-width: 500px) {
+  section.header h1 {
+    font-size: 4rem;
+    color: #222222;
+  }
 }
 section.header nav {
   display: flex;
@@ -269,7 +319,7 @@ footer nav {
   align-content: center;
   align-items: center;
   width: 20%;
-  min-width: 100px;
+  min-width: 130px;
   display: flex;
   justify-content: space-between;
 }
