--- a/less/footer.less
+++ b/less/footer.less
@@ -1,6 +1,6 @@
 footer{
     display: flex;
-    border-top: 1px solid black;
+    border-top: 1px solid @redditgray;
     justify-content: space-between;
     align-content: center;
     align-items: center;
@@ -10,7 +10,7 @@ footer{
     max-width: 1200px;
     max-height: 9vh;
     p{
-        color: #222222;
+        color: @redditgray;
         text-align: center;
         align-items: center;
     }
@@ -23,7 +23,7 @@ footer{
         justify-content: space-between;
             a{
             text-decoration: none;
-            color: #222222;
+            color: @redditgray;
             font-size: 1.5rem;
             }
     }
