--- a/less/global.less
+++ b/less/global.less
@@ -59,9 +59,10 @@ body{
         width: 90%;
       }
       h2{
-        font-family: 'M PLUS Rounded 1c', sans-serif;
-        color: #222222;
+        font-family: @rounded;
+        color: @redditgray;
         font-weight: bold;
+        margin: 2%;
       }
       
     }
@@ -72,6 +73,10 @@ body{
         width: 100%;
       }
     }
+  }
+  h2{
+    .rounded();
+    font-size: 4rem;
   }
 }
 
@@ -87,17 +92,17 @@ section.team{
     justify-content: space-around;
     align-items: center;
     margin: 4% 0;
-    p{
-      width: 75%;
-    }
   }
   div.bio{
     h3{
-      font-size: 2rem;
+      font-size: 3rem;
+      margin: 2%;
     }
-    display: flex;
-    flex-direction: column;
-    
+    .column();
+    width: 60%;
+    @media @mobile{
+      width: 100%;
+    }
   }
   div.even{
     @media @mobile{
