--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,7 +3,7 @@ section.header{
     align-items: center;
     text-align: center;
     justify-content: space-between;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid @redditgray;
     padding: 1%;
     max-height: 9vh;
     a.logo{
@@ -24,14 +24,14 @@ section.header{
     }
     h1 {
         
-        color: #ff4500;
+        color: @orangered;
         font-size: 4.5rem;
         font-family: 'M PLUS Rounded 1c', sans-serif;
         font-weight: bold;
         text-transform: lowercase;
         @media @mobile{
             font-size: 4rem;
-            color: #222222;
+            color: @redditgray;
           }
     }
     nav{
