--- a/css/index.css
+++ b/css/index.css
@@ -180,6 +180,9 @@ body div.hero {
 }
 body div.hero div.text {
   width: 35%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 @media (max-width: 500px) {
   body div.hero div.text {
@@ -191,6 +194,23 @@ body div.hero div.text h2 {
   color: #222222;
   font-weight: bold;
   margin: 2%;
+}
+body div.hero div.text a {
+  min-width: 160px;
+  height: 5rem;
+}
+body div.hero div.text button {
+  font-family: 'M PLUS Rounded 1c', sans-serif;
+  font-weight: bold;
+  text-transform: lowercase;
+  font-size: 2rem;
+  border: 1px solid #222222;
+  background: white;
+  padding: 2% 5%;
+  color: #ff4500;
+  border-radius: 5px;
+  width: 100%;
+  height: 100%;
 }
 body div.hero img {
   width: 60%;
