--- a/less/global.less
+++ b/less/global.less
@@ -55,6 +55,8 @@ body{
     }
     div.text{
       width: 35%;
+      .column();
+      align-items: center;
       @media @mobile{
         width: 90%;
       }
@@ -64,7 +66,21 @@ body{
         font-weight: bold;
         margin: 2%;
       }
-      
+      a{
+        min-width: 160px;
+        height: 5rem;
+      }
+      button{
+        .rounded();
+        font-size: 2rem;
+        border: 1px solid @redditgray;
+        background: white;
+        padding: 2% 5%;
+        color: @orangered;
+        border-radius: 5px;
+        width: 100%;
+        height: 100%;
+      }
     }
     img{
       width: 60%;
